k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-lb
spec:
  type: LoadBalancer
  selector:
    run: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: my-app
  name: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      run: my-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: my-app
    spec:
      containers:
        - image: jsj6121/bg:1.2
          name: my-app
          ports:
            - containerPort: 8080
          resources: {}
status: {}
