k8s/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: mysql
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - protocol: TCP
              containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
            - mountPath: /docker-entrypoint-initdb.d
              name: init-db
          resources:
            limits:
              memory: 1Gi
          readinessProbe:
            tcpSocket:
              port: 3306
      volumes:
        - name: init-db
          configMap:
            name: init-db
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
